<resources>
    <string name="spsk_attributionImgDesc">Spokestack attribution image</string>
    <string name="spsk_openTrayDesc">open Spokestack tray</string>
    <string name="spsk_closeTrayDesc">close Spokestack tray</string>
    <string name="spsk_soundBtnDesc">toggle text to speech responses</string>
    <string name="spsk_grabBarDesc">handle for resizing Spokestack Tray</string>

    <string name="spsk_listening">LISTENING</string>
    <string name="spsk_messageFont">sans-serif</string>
    <string name="listening_desc">notification that Spokestack is listening</string>

    <string name="fragment_tag">spokestack_tray</string>
</resources>