<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trayMotion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="horizontal"
    app:layoutDescription="@xml/tray_fragment_scene">

    <io.spokestack.tray.MicButton
        android:id="@+id/micButton"
        android:layout_width="@dimen/spsk_micTabWidth"
        android:layout_height="@dimen/spsk_micTabHeight"
        android:background="@drawable/mic_tab_btn_left"
        android:contentDescription="@string/spsk_openTrayDesc"/>

    <io.spokestack.tray.TrayView
        android:id="@+id/trayView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/spsk_colorTrayBg"
        tools:context=".SpokestackTray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/statusBar"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/spsk_grabBarDesc"
                        android:src="@drawable/drag_handle" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:padding="5dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/backButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:backgroundTint="@color/spsk_colorTransparent"
                        android:contentDescription="@string/spsk_closeTrayDesc"
                        android:src="@drawable/arrow_left" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageButton
                        android:id="@+id/soundButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/sound_on_btn"
                        android:contentDescription="@string/spsk_soundBtnDesc" />
                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/messageStream"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spsk_messageStreamHeight"
                android:minHeight="@dimen/spsk_messageStreamMinHeight"
                tools:listitem="@layout/system_msg_view" >

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/listenBubble"
                    android:layout_width="@dimen/spsk_listenButtonWidth"
                    android:layout_height="@dimen/spsk_listenButtonHeight"
                    android:background="@color/spsk_colorBrand"
                    android:contentDescription="@string/listening_desc"
                    android:fontFamily="@string/spsk_messageFont"
                    android:gravity="center"
                    android:text="@string/spsk_listening"
                    android:textColor="@color/spsk_colorListenText"
                    android:visibility="invisible" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/attribution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/spsk_attributionImgDesc"
                    android:src="@drawable/attribution_image"
                    tools:layout_editor_absoluteY="254dp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

    </io.spokestack.tray.TrayView>

</androidx.constraintlayout.motion.widget.MotionLayout>